# video-editor

./: .gitignore  .gitmodules  README.md  setup_deps.sh  test_cuj7.py
.github/workflows/: build-extension.yml
browser-extension/: .gitkeep  CMakeLists.txt  index.html  package.json  vite.config.ts
browser-extension/public/: manifest.json
browser-extension/public/wasm/: video_editor_wasm.js
browser-extension/src/: App.tsx  global.d.ts  wasm_bindings.cpp
core-engine/: .gitkeep  CMakeLists.txt
core-engine/src/: GpuTimelineProcessor.cpp  GpuTimelineProcessor.h  VideoTimelineManager.cpp  VideoTimelineManager.h  gpu_processing.zig  main.cpp  vse_comp.py
core-engine/src/ai_features/: AutoSceneDetector.cpp  AutoSceneDetector.h  TranscriptionManager.cpp  TranscriptionManager.h
core-engine/src/diagnostics/: FrameworkLogBridge.cpp  FrameworkLogBridge.h  Logger.cpp  Logger.h
desktop-app/: .gitkeep  CMakeLists.txt
desktop-app/src/: LogConsoleWidget.cpp  LogConsoleWidget.h  MainWindow.cpp  MainWindow.h  UI_Engine_Bridge.cpp  UI_Engine_Bridge.h  main.cpp  main.qml
frontend-ui/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend-ui/src/: index.css  main.tsx  tauri-dialog-shim.ts  tauri-shim.ts
frontend-ui/src-tauri/: Cargo.toml  tauri.conf.json
frontend-ui/src-tauri/capabilities/: default.json
frontend-ui/src-tauri/permissions/: custom.toml
frontend-ui/src-tauri/src/: lib.rs
frontend-ui/src/app/: App.module.css  App.tsx  video-catalog.ts
frontend-ui/src/app/AIPromptPanel/: AIPromptPanel.module.css  AIPromptPanel.tsx
frontend-ui/src/app/AIStudio/: AIStudio.module.css  AIStudio.tsx
frontend-ui/src/app/EffectsSelector/: EffectsSelector.module.css  EffectsSelector.tsx
frontend-ui/src/app/MainPlayer/: MainPlayer.module.css  MainPlayer.tsx
frontend-ui/src/app/PostProduction/: AudioView.module.css  AudioView.tsx  ColorGradingView.module.css  ColorGradingView.tsx  TranscriptView.module.css  TranscriptView.tsx  VfxView.module.css  VfxView.tsx
frontend-ui/src/app/Timeline/: Timeline.module.css  Timeline.tsx
frontend-ui/src/app/VideoSelector/: VideoSelector.module.css  VideoSelector.tsx
frontend-ui/src/app/WindowControls/: WindowControls.module.css  WindowControls.tsx
frontend-ui/src/imgly/: index.ts
